# texty

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  Cargo.toml  PDR.md  README.md  TODO.md
.cargo/: config.toml
docs/: IMPLEMENTATION.md  THEME_SYSTEM.md  USAGE.md
proptest-regressions/: buffer.txt
queries/javascript/: highlights.scm
queries/python/: highlights.scm
queries/rust/: highlights.scm
queries/typescript/: highlights.scm
runtime/: languages.toml
runtime/queries/javascript/: highlights.scm
runtime/queries/rust/: highlights.scm
runtime/queries/typescript/: highlights.scm
runtime/themes/: default.toml  dracula.toml  gruvbox.toml  monokai.toml  nord.toml  solarized-dark.toml  tokyo-night.toml
src/: buffer.rs  cli.rs  clipboard.rs  command.rs  config.rs  cursor.rs  editor.rs  fuzzy_search.rs  keymap.rs  lib.rs  main.rs  mode.rs  motion.rs  registers.rs  theme_discovery.rs  viewport.rs  vim_parser.rs
src/formatter/: external.rs  indent.rs  mod.rs
src/lsp/: client.rs  completion.rs  diagnostics.rs  manager.rs  mod.rs  progress.rs  transport.rs
src/syntax/: cache.rs  config.rs  highlighter.rs  language.rs  mod.rs  query_loader.rs  theme.rs  theme_test.rs
src/ui/: mod.rs  renderer.rs  system_theme.rs  theme.rs  theme_loader.rs  theme_manager.rs
src/ui/widgets/: completion.rs  editor_pane.rs  fuzzy_search.rs  gutter.rs  hover.rs  menu.rs  mod.rs  preview.rs  status_bar.rs
tests/: buffer_overflow_test.rs  cursor_bounds_test.rs  edge_case_scenarios_test.rs  integration_test.rs  motion_bounds_test.rs  preview_formatting_test.rs  property_based_tests.rs  theme_integration_test.rs
tests/common/: mod.rs
